--- a/packages/ckeditor5-table/package.json
+++ b/packages/ckeditor5-table/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ckeditor/ckeditor5-table",
+  "name": "pothi-ckeditor5-table",
   "version": "27.0.0",
   "description": "Table feature for CKEditor 5.",
   "keywords": [
