--- a/packages/ckeditor5-table/package.json
+++ b/packages/ckeditor5-table/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pothi-ckeditor5-table",
-  "version": "27.0.0",
+  "name": "@ckeditor/ckeditor5-table",
+  "version": "27.0.1",
   "description": "Table feature for CKEditor 5.",
   "keywords": [
     "ckeditor",
