--- a/packages/ckeditor5-table/package.json
+++ b/packages/ckeditor5-table/package.json
@@ -15,11 +15,21 @@
     "lodash-es": "^4.17.15"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-alignment": "^27.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^27.0.0",
     "@ckeditor/ckeditor5-clipboard": "^27.0.0",
     "@ckeditor/ckeditor5-core": "^27.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^24.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^27.0.0",
     "@ckeditor/ckeditor5-engine": "^27.0.0",
     "@ckeditor/ckeditor5-horizontal-line": "^27.0.0",
+    "@ckeditor/ckeditor5-image": "^27.0.0",
+    "@ckeditor/ckeditor5-indent": "^27.0.0",
+    "@ckeditor/ckeditor5-list": "^27.0.0",
+    "@ckeditor/ckeditor5-media-embed": "^27.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^27.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^27.0.0",
+    "@ckeditor/ckeditor5-typing": "^27.0.0",
     "@ckeditor/ckeditor5-ui": "^27.0.0",
     "@ckeditor/ckeditor5-undo": "^27.0.0",
     "@ckeditor/ckeditor5-utils": "^27.0.0",
